--- a/Frontend/organisms/footer.html
+++ b/Frontend/organisms/footer.html
@@ -18,6 +18,11 @@
 <body>
     <!-- footer content start -->
     <div class="cg-footer">
+        <div class="cg-footer__top">
+            <div class="content-wrapper">
+                <img src="../../images/Strat/milk-bucket.svg">
+            </div>
+        </div>
         <div class="content-wrapper">
             <div class="cg-footer__outer">
                 <div class="accordion" id="accordionExample">
