--- a/organisms/header.html
+++ b/organisms/header.html
@@ -21,6 +21,9 @@
     <div class="content-wrapper">
       <p class="cg-headerTop__txt">Order before 4pm for next day delivery</p>
       <div class="cg-headerTop__navbar">
+        <!-- <div class="cg-headerTop__hambmenu">
+          <a href="#"><img src="../assets/images/hamburger-icon.svg" alt="hamburger menu"></a>
+        </div> -->
         <div class="cg-headerTop__logo">
           <a href="#"><img src="../assets/images/cadbury-logo.png" alt="cadbury-logo"></a>
         </div>
@@ -30,8 +33,8 @@
         </div>
         <div class="cg-headerTop__controls">
           <a href="#"><img src="../assets/images/star.svg" alt="wishlist"></a>
-          <a href="#"><img src="../assets/images/star.svg" alt="profile"></a>
-          <a href="#"><img src="../assets/images/star.svg" alt="cart"></a>
+          <a href="#"><img src="../assets/images/user.svg" alt="profile"></a>
+          <a href="#"><img src="../assets/images/cart.svg" alt="cart"></a>
         </div>
       </div>
 
