--- a/Frontend/organisms/mobMennu.html
+++ b/Frontend/organisms/mobMennu.html
@@ -51,9 +51,9 @@
                                 <a href="#" class="cg-menuList__bacLink" data-parent="menu">Menu</a>
                             </li>
                             <li class="cg-menuList__heading">Gift Ideas</li>
-                            <li><a href="#">Shop by Occasion</a></li>
-                            <li><a href="#">Shop by Recipient</a></li>
-                            <li><a href="#">Shop by Budget</a></li>
+                            <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Occasion</a></li>
+                            <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Recipient</a></li>
+                            <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Budget</a></li>
                             <li class="cg-menuList__additional">
                                 <ul>
                                     <li><a href="">Looking for Inspiration?</a></li>
