--- a/Frontend/organisms/mobMennu.html
+++ b/Frontend/organisms/mobMennu.html
@@ -51,7 +51,16 @@
                                 <a href="#" class="cg-menuList__bacLink" data-parent="menu">Menu</a>
                             </li>
                             <li class="cg-menuList__heading">Gift Ideas</li>
-                            <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Occasion</a></li>
+                            <li><a href="#" class="cg-menuList__hasSubmenu" data-target="submenu2">Shop by Occasion</a>
+                                <ul id="submenu2" class="cg-menuList__submenu">
+                                    <li class="submenu-header">
+                                        <a href="#" class="cg-menuList__bacLink" data-parent="menu">Gift Ideas</a>
+                                    </li>
+                                    <li class="cg-menuList__heading">Shop by Occasion</li>
+                                    <li><a href="#">xxxx</a></li>
+                                    <li><a href="#">xxxxxxxxxxx</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Recipient</a></li>
                             <li><a href="#" class="cg-menuList__hasSubmenu">Shop by Budget</a></li>
                             <li class="cg-menuList__additional">
